--- a/Styles/index.css
+++ b/Styles/index.css
@@ -21,7 +21,10 @@ toolbox
 /*
 contets
 */
-textarea{
+
+.textarea{
+    padding: 0 0 0 10px;
+    background: white;
     -webkit-appearance: none;
     height: 500px;
     width: 100%;
